2001-08-02  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-add-referer): New option.
	(w3m-goto-url): When `w3m-add-referer' equals nil, no reference
	information is given to `w3m-exec'.

	* README, README.ja: Update documents for required version of w3m.

	* w3m-0.2.1-mnc.patch: Removed.

	* w3m.el (TOP): Add autoload for w3m-namazu.

	* w3m-namazu.el: New file.

2001-08-01  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-w3m-retrieve): Bind coding-system-for-write as 'binary.

	* w3m-form.el (w3m-form-make-form-data): New function.
	(w3m-form-make-form-urlencoded): Eliminated.
	(w3m-fontify-forms): Added 'file' input processing.
	(w3m-form-input-file): New function.
	(w3m-form-input-textarea-keymap): Bind "\C-c\C-k" as well.
	(w3m-form-input-select-keymap): Ditto.
	(w3m-form-input-map-keymap): Ditto.
	(w3m-form-submit): Call `w3m-form-make-form-data' instead of
	`w3m-form-make-form-urlencoded'.

2001-07-31  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el: Applied patch [emacs-w3m: 01330].
	(w3m-exec-filter): Changed regexp for authentication realm.

	* w3m.el (w3m-toggle-inline-images): Set `referer' argument of
	`w3m-create-image'.

	* w3m-e21.el (w3m-create-image): Added argument `referer'.

	* w3m-xmas.el (w3m-create-image): Ditto.

	* w3m-form.el (w3m-form-submit): Set `referer' argument of
	w3m-goto-url.

	* w3m.el (w3m-w3m-retrieve): Make a temporary file for POST;
	Use -header option to specify Content-Type: field.
	(w3m-w3m-retrieve): Added argument `referer';
	Add -header option to specify Referer: field.
	(w3m-retrieve): Added argument `referer'.
	(w3m-exec): Ditto.
	(w3m-goto-url): Ditto.
	(w3m-view-this-url): Set `referer' argument of w3m-goto-url.

2001-07-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-make-help-echo): For FSF Emacs 21, specify the third
	argument of `get-text-property' where the buffer is to be checked;
	for XEmacs, make it not to work if the buffer is not focused.