@@ -1,3 +1,8 @@
+2001-08-02  Yuuichi Teranishi  <teranisi@gohome.org>
+
+	* w3m-form.el (w3m-form-make-form-data): Fixed typo.
+	(w3m-form-input-file): Rewrite.
+
 2001-08-02  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* w3m.el (w3m-add-referer): New option.
